#+STARTUP:showall
* NEWS (user visible changes)

* 1.3.x (unreleased, experimental/development version)

*** mu

    - There's a new subcommand ~mu init~ to initialize the mu database, which
      takes the ~--maildir~ and ~--my-address~ parameters that ~index~ used to take.
      These parameters are persistent so ~index~ does not need them anymore.

      ~init~ only needs to be run once or when changing these parameters. That
      implies that you need to re-index after changing these parameters.

    - There is another new subcommand ~mu info~ to get information about the mu
      database.

    - The contacts cache (which is used by ~mu cfind~ and ~mu4e~'s
      contact-completion) is now stored as part of the Xapian database rather
      than as a separate file.

    - mu now defaults to the [[https://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html][XDG Base Directory Specification]] for the default
      locations for various files. E.g. on Unix the mu database now lives under
      ~~/.cache/mu/~ rather than ~~/.mu~. You can still use the old location by
      passing ~--muhome=~/.mu~ to various ~mu~ commands, or setting ~(setq
      mu4e-mu-home "~/.mu")~ for ~mu4e~.

      It is expected that the directory where the database lives survives a
      reboot; if that is not true for the default, you can use ~--muhome~.

      After upgrading, you may wish to delete the files in the old location to
      recover some diskspace.

    - The ~--xbatchsize~ and ~--autoupgrade~ options for indexing are gone now; both
      are determined implicitly now.

*** mu4e

    - ~mu4e~ no longer uses the ~mu4e-maildir~ and ~mu4e-user-mail-address-list~
      variables; instead it uses the information it gets from ~mu~ (see the ~mu~
      section above).

      It is strongly recommended that you run ~mu init~ with the appropriate
      parameters to (re)initialize the Xapian database.
